# zero-to-prod-rs

./: Cargo.toml  Dockerfile  README.md  configuration.local.yaml  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
.sqlx/: query-855507bfcddd4bda906cfc47c57c306cdea9dd13da7e75507ccb78037f0dc9df.json
migrations/: 20230529001658_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
