[package]
name = "zero-to-prod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-prod-rs"

[dependencies]
actix-session = "0.7.2"
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
base64 = "0.21.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
dotenv = "0.15.0"
htmlescape = "0.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
sha3 = "0.10.8"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
once_cell = "1.17.1"
claims = "0.7.1"
fake = "2.6.1"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.28.1", features = ["rt", "macros"] }
wiremock = "0.5.18"
serde_json = "1.0.96"
linkify = "0.9.0"
