[package]
name = "zero-to-prod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-prod-rs"

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
actix-web = "4.5.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.20.2"
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.0"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
config = "0.14.0"
dotenvy = "0.15.7"
htmlescape = "0.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.114"
sha3 = "0.10.8"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = "0.17.0"

[dev-dependencies]
once_cell = "1.19.0"
claims = "0.7.1"
fake = "2.9.2"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
wiremock = "0.6.0"
linkify = "0.10.0"
